<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/nfsu_blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:text="@string/headerText"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Heading"
        android:padding="15dp"
        android:text="@string/School"
        android:textColor="@android:color/darker_gray"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/spinner_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_school"
        android:layout_marginTop="15dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textView_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_school"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:text="@string/Course"
        android:textColor="@android:color/darker_gray"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/spinner_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_course"
        android:layout_marginTop="15dp"
        android:minHeight="48dp"
        android:background="@android:drawable/btn_dropdown"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textView_batch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_course"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:text="@string/batch"
        android:textColor="@android:color/darker_gray"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/spinner_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_batch"
        android:layout_marginTop="15dp"
        android:minHeight="48dp"
        android:background="@android:drawable/btn_dropdown"
        android:padding="10dp" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_subject"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/nfsu_yellow"
        android:onClick="selectingfeatures"
        android:padding="15dp"
        android:text="Submit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>